# corpus-review

./: .gitignore  CLAUDE.md  CLEANUP_PLAN.md  DDD_REFACTORING_PLAN.md  FRONTEND_DDD_AUDIT.md  FRONTEND_PHASE1_ANALYSIS.md  FRONTEND_REFACTORING_PLAN.md  FRONTEND_UNUSED_FILE_REMOVAL_PLAN.md  SERVICE_LAYER_ANALYSIS.md  component-audit.txt  package.json
src/: App.tsx
src-tauri/: Cargo.toml  current_domain_imports.txt  phase2_compilation_errors.txt  tauri.conf.json
src-tauri/migrations/: 001_create_projects.sql  002_create_original_documents.sql  003_create_file_extractions.sql  004_create_extracted_documents.sql  005_create_indexes.sql  20250919000001_initial_workspace_schema.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: app_state.rs  dtos.rs  file_system_service.rs  mod.rs  workspace_service.rs
src-tauri/src/commands/: create_project.rs  delete_project.rs  document_commands.rs  document_preview_commands.rs  extracted_document_commands.rs  extraction_commands.rs  file_system_commands.rs  list_projects.rs  mod.rs  open_project.rs  workspace_commands.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/infrastructure/: database.rs  mod.rs
src-tauri/tests/: test_document_caddy.rs  test_folder_contents.rs  test_panel_visibility.rs  test_save_layout.rs  test_workspace_layout.rs
src-tauri/tests/commands/: mod.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/contract/: test_cancel_extraction.rs  test_document_commands.rs  test_document_manipulation.rs  test_get_document_details.rs  test_get_extracted_document.rs  test_get_extraction_status.rs  (+6 more)
(+409 files in other folders)
